--- a/lab3/lab3_2.ipynb
+++ b/lab3/lab3_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "0.8"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,13 +348,12 @@
     "    print(\"after 100 generations\")\n",
     "    print(\"best solution:\")\n",
     "    print(best_sol)\n",
-    "    print(best_sol_fit)\n",
     "    return best_sol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -363,8 +362,8 @@
      "text": [
       "after 100 generations\n",
       "best solution:\n",
-      "(0.1579461860987983, 0.06349456409784537, 0.08973543738499212)\n",
-      "1.0\n"
+      "(0.019648238382552696, 0.9427054574362834, 0.32374158466892455)\n",
+      "test:\n"
      ]
     },
     {
@@ -373,13 +372,14 @@
        "1.0"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "best_sol= GA()\n",
+    "print(\"test:\")\n",
     "evaluate(gabriele, best_sol)"
    ]
   }
