--- a/lab3/lab3_2.ipynb
+++ b/lab3/lab3_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "0.8"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -362,24 +362,24 @@
      "text": [
       "after 100 generations\n",
       "best solution:\n",
-      "(0.019648238382552696, 0.9427054574362834, 0.32374158466892455)\n",
-      "test:\n"
+      "(0.18118635711206343, 0.03989713934750305, 0.07088704561671222)\n",
+      "win-rate:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "best_sol= GA()\n",
-    "print(\"test:\")\n",
+    "print(\"win-rate:\")\n",
     "evaluate(gabriele, best_sol)"
    ]
   }
